src/objects/Case2Rally_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Requirements__c</fullName>
        <defaultValue>true</defaultValue>
        <label>allowRequirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defect_Field_Map__c</fullName>
        <label>Defect_Field_Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Field_Map__c</fullName>
        <label>Story_Field_Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apiKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rallyUrl__c</fullName>
        <label>rallyUrl</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case2Rally Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rally Workspace</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case2Rally Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>